# subvocal

./: .gitignore  .gitmodules  CLAUDE.md  FINDINGS.md  README.md  pyproject.toml
.github/workflows/: tests.yml
scripts/: m2_sanity_check.py  transport_fidelity_check.py
subvocal/: __init__.py  debug.py  lens.py  metrics.py  profile.py  report.py
tests/: conftest.py  test_debug.py  test_fitted_lens.py  test_lens.py  test_metrics.py  test_profile.py  test_report.py
